tests/valid/58250_basic_addition/58250_basic_addition.agu
-- Author: 58250, Leonardo Monteiro

let a : Int = 5
let b : Int = 10
let result : Int = a + b

let _ : Unit = 
    print(result)  -- Expected result: 15
