tests/invalid/58250_invalid_semantic_undeclared_function/58250_invalid_semantic_undeclared_function.agu
-- Author: 58250, Leonardo Monteiro

let result : Int = sum(10, 20)
